--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -364,17 +364,17 @@
     <string name="all_medical_data_lowercase_label" description="Lowercase label used to show the user's active calories burned data [CHAR_LIMIT=50]">all health records</string>
     <string name="all_medical_data_content_description" description="Content description for switch that enables permissions for writing the user's medical data [CHAR_LIMIT=NONE]">Write all health records</string>
 
-    <string name="allergy_intolerance_uppercase_label" description="Uppercase label used to show the user's allergy intolerance data [CHAR_LIMIT=50]">Allergies</string>
-    <string name="allergy_intolerance_lowercase_label" description="Lowercase label used to show the user's allergy intolerance data [CHAR_LIMIT=50]">allergies</string>
-    <string name="allergy_intolerance_content_description" description="Content description for switch that enables permissions for reading the user's allergy and intolerance data [CHAR_LIMIT=NONE]">Read allergies</string>
+    <string name="allergies_intolerances_uppercase_label" description="Uppercase label used to show the user's allergy intolerance data [CHAR_LIMIT=50]">Allergies</string>
+    <string name="allergies_intolerances_lowercase_label" description="Lowercase label used to show the user's allergy intolerance data [CHAR_LIMIT=50]">allergies</string>
+    <string name="allergies_intolerances_content_description" description="Content description for switch that enables permissions for reading the user's allergy and intolerance data [CHAR_LIMIT=NONE]">Read allergies</string>
 
     <string name="conditions_uppercase_label" description="Uppercase label used to show the user's data about medical conditions [CHAR_LIMIT=50]">Conditions</string>
     <string name="conditions_lowercase_label" description="Lowercase label used to show the user's data about medical conditions [CHAR_LIMIT=50]">conditions</string>
     <string name="conditions_content_description" description="Content description for switch that enables permissions for reading the user's data about medical conditions [CHAR_LIMIT=NONE]">Read conditions</string>
 
-    <string name="immunization_uppercase_label" description="Uppercase label used to show the user's immunization data [CHAR_LIMIT=50]">Immunization</string>
-    <string name="immunization_lowercase_label" description="Lowercase label used to show the user's immunization data [CHAR_LIMIT=50]">immunization</string>
-    <string name="immunization_content_description" description="Content description for switch that enables permissions for reading the user's immunization data [CHAR_LIMIT=NONE]">Read immunization</string>
+    <string name="immunizations_uppercase_label" description="Uppercase label used to show the user's immunization data [CHAR_LIMIT=50]">Immunizations</string>
+    <string name="immunizations_lowercase_label" description="Lowercase label used to show the user's immunization data [CHAR_LIMIT=50]">immunizations</string>
+    <string name="immunizations_content_description" description="Content description for switch that enables permissions for reading the user's immunization data [CHAR_LIMIT=NONE]">Read immunizations</string>
 
     <string name="laboratory_results_uppercase_label" description="Uppercase label used to show the user's laboratory results data [CHAR_LIMIT=50]">Laboratory Results</string>
     <string name="laboratory_results_lowercase_label" description="Lowercase label used to show the user's laboratory results data [CHAR_LIMIT=50]">laboratory results</string>
