--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -127,6 +127,23 @@
     <!-- region permission ui labels -->
 
     <!-- Other health permissions -->
+    <!-- Apps with medical permissions -->
+    <string name="background_read_medical_title" description="Title for permission to read health data in the background when the app also has medical permissions. [CHAR_LIMIT=NONE]">Access all data in the background</string>
+    <string name="background_read_medical_request_title" description="Title for screen to give permission to an app to read health data in the background. when the app also has medical permissions [CHAR_LIMIT=NONE]">Allow <xliff:g example="Run Tracker" id="app_name">%1$s</xliff:g> to access all data in the background?</string>
+    <string name="background_read_medical_description" description="Description for permission to read health data in the background when the app also has medical permissions. [CHAR_LIMIT=NONE]">Allow this app to access fitness and wellness data and health records data when you\'re not using the app</string>
+    <string name="background_read_medical_request_description" description="Description for screen to give permission to an app to read health data in the background when the app also has medical permissions. [CHAR_LIMIT=NONE]">If you allow, this app can access fitness and wellness data and health records data when you\'re not using the app.</string>
+
+    <string name="historic_access_medical_title" description="Title for permission to access past health data when the app also has medical permissions. [CHAR_LIMIT=NONE]">Access past fitness and wellness data</string>
+    <string name="historic_access_medical_request_title" description="Title for screen to give permission to an app to access past health data when the app also has medical permissions. [CHAR_LIMIT=NONE]">Allow <xliff:g example="Run Tracker" id="app_name">%1$s</xliff:g> to access past fitness and wellness data?</string>
+    <string name="historic_access_medical_description" description="Description for permission to access past health data when the app also has medical permissions. [CHAR_LIMIT=NONE]">Allow this app to access data added before <xliff:g example="22 January 2022" id="data_access_date">%1$s</xliff:g></string>
+    <string name="historic_access_medical_description_fallback" description="Description for permission to access past health data when the app also has medical permissions and when there is no access date [CHAR_LIMIT=NONE]">Allow this app to access all past data</string>
+    <string name="historic_access_medical_request_description" description="Description for screen to give permission to an app to access past health data when the app also has medical permissions. [CHAR_LIMIT=NONE]">If you allow, this app can access data added before <xliff:g example="22 January 2022" id="data_access_date">%1$s</xliff:g>.</string>
+    <string name="historic_access_medical_request_description_fallback" description="Description for screen to give permission to an app to access past health data when the app also has medical permissions. [CHAR_LIMIT=NONE]">If you allow, this app can access all past data.</string>
+
+    <string name="historic_access_medical_warning" description="Message to inform the user that no fitness data is currently being read [CHAR_LIMIT=NONE]">No fitness data is currently being read because <xliff:g example="Run Tracker" id="app_name">%1$s</xliff:g> has no read permissions on</string>
+    <!--endregion-->
+
+    <!-- Apps without medical permissions -->
     <string name="background_read_title" description="Title for permission to read health data in the background. [CHAR_LIMIT=NONE]">Access data in the background</string>
     <string name="background_read_request_title" description="Title for screen to give permission to an app to read health data in the background. [CHAR_LIMIT=NONE]">Allow <xliff:g example="Run Tracker" id="app_name">%1$s</xliff:g> to access data in the background?</string>
     <string name="background_read_description" description="Description for permission to read health data in the background. [CHAR_LIMIT=NONE]">Allow this app to access Health&#160;Connect data when you\'re not using the app</string>
@@ -138,6 +155,8 @@
     <string name="historic_access_description_fallback" description="Description for permission to access past health data when there is no access date [CHAR_LIMIT=NONE]">Allow this app to access all past Health&#160;Connect data</string>
     <string name="historic_access_request_description" description="Description for screen to give permission to an app to access past health data. [CHAR_LIMIT=NONE]">If you allow, this app can access Health&#160;Connect data added before <xliff:g example="22 January 2022" id="data_access_date">%1$s</xliff:g>.</string>
     <string name="historic_access_request_description_fallback" description="Description for screen to give permission to an app to access past health data. [CHAR_LIMIT=NONE]">If you allow, this app can access all past Health&#160;Connect data.</string>
+    <!--endregion-->
+
     <!--endregion-->
 
     <!-- region Activity data types -->
@@ -1474,6 +1493,8 @@
     <string name="additional_access_combined_footer" description="Footer of screen to manage additional permissions for an app when no read fitness permissions are granted [CHAR_LIMIT=NONE]">Enable at least one read permission in order to turn on background or past data access for this app</string>
     <string name="additional_access_background_footer" description="Footer of screen to manage additional permissions for an app when no read fitness permissions are granted [CHAR_LIMIT=NONE]">Enable at least one read permission in order to turn on background access for this app</string>
     <string name="additional_access_history_footer" description="Footer of screen to manage additional permissions for an app when no read fitness permissions are granted [CHAR_LIMIT=NONE]">Enable at least one read permission in order to turn on past data access for this app</string>
+    <string name="additional_access_medical_read_footer" description="Footer of screen to manage additional permissions for an app when medical read permissions are granted [CHAR_LIMIT=NONE]"><xliff:g example="Run Tracker" id="app_name">%1$s</xliff:g> can already access past data for your health records. To change this, turn off health record permissions for this app</string>
+    <string name="additional_access_medical_read_footer_link" description="Link to manage health records permissions in footer of screen showing the additional permissions of an app [CHAR_LIMIT=NONE]">Manage health record permissions</string>
     <!--  endregion -->
 
     <!-- region Onboarding -->
